--- a/laxaNam/granthaH/dhvanyAlokaH/mUlam/4.md
+++ b/laxaNam/granthaH/dhvanyAlokaH/mUlam/4.md
@@ -271,9 +271,7 @@ title: ४
 न्यस्य काव्यार्थस्याभावात्, सामान्यस्य चादिकविनैव प्रदर्शित-  
 त्वात् । उक्तिवैचित्र्यान्नैष दोष इति चेत् --- किमिदमुक्तिवैचित्र्यम् ?  
 उक्तिर्हि वाच्यविशेषप्रतिपादि वचनम् । तद्वैचित्र्ये कथं न वाच्यवै-  
-चित्र्यम् । वाच्यवाचकयोरविनाभावेन प्रवृत्तेः । वाच्यानां च काव्ये-  
-प्रतिभासमानानां यद्रूपं तत्तु ग्राह्यविशेषाभेदेनैव प्रतीयते । तेनो-  
-क्तिवैचित्र्यवादिना वाच्यवैचित्र्यमनिच्छताप्यवश्यमेवाभ्युपगन्तव्यम् ।  
+चित्र्यम् । वाच्यवाचकयोरविनाभावेन प्रवृत्तेः । वाच्यानां च काव्ये प्रतिभासमानानां यद्रूपं तत्तु ग्राह्यविशेषाभेदेनैव प्रतीयते । तेनोक्तिवैचित्र्यवादिना वाच्यवैचित्र्यम् अनिच्छताप्यवश्यम् एवाभ्युपगन्तव्यम् ।  
 
 तदयमत्र सङ्क्षेपः ---  
 
