--- a/laxaNam/granthaH/dhvanyAlokaH/sarva-prastutiH/4.md
+++ b/laxaNam/granthaH/dhvanyAlokaH/sarva-prastutiH/4.md
@@ -17,7 +17,11 @@ title = "४"
 यद्यपिऽसहदयमनःप्रीतयऽ इत्यनेन प्रयोजनं प्रागेवोक्तं, तृतीयोद्योतावधौ च सत्काव्यं कर्तुं वा ज्ञातुं वेति तदेवेषत्स्फुटीकृतं, तथापि स्फुटतरीकर्तुमिदानीं यत्नः ।
 यतस्सुस्पष्टरूपत्वेन विज्ञायते, अतोऽस्पष्टनिरूपितात्स्पष्टनिरूपणमन्यथैव प्रतिभातीति प्रयोजनान्तरमित्युक्तम् ।
 अथवा पूर्वोक्तयोः प्रयोजनयोरन्तरं विशेषोऽभिधीयते - केन विशेषेण सत्काव्यकरणमस्य प्रयोजनं, केन च सत्काव्यबोध इति विशेषो निरूप्यते ।
-बालप्रिया अथ चतुर्थोद्योतटिप्पणी प्रारभ्यते अर्थोद्योतं चतुर्थे च लोचनस्य यथामति ।
+
+
+बालप्रिया
+
+अथ चतुर्थोद्योतटिप्पणी प्रारभ्यते अर्थोद्योतं चतुर्थे च लोचनस्य यथामति ।
 किमपि व्याकरिष्यामि प्रसीदन्त्वत्र मे बुधाः ॥ ॥
 कृत्येति ।
 कृत्यपञ्चकं सृष्ट्यादिरूपम् ।
@@ -89,7 +93,11 @@ __________
 ततश्च काव्यमपि तज्जातीयमेवेति भ्रष्ट इदानीं कविप्रयोगः, उक्तवैचित्र्येण तु त एवार्था निरवधयो भवन्तीति तद्विषयाणां प्रतिभानामानन्त्यमुपपन्नमिति ।
 ननु प्रतिभानन्त्यस्य किं फलमिति निर्णेतुं वाणी नवत्वमायातीत्युक्तं, तेन वाणीनां काव्यवाक्यानां तावन्नवत्वमायाति ।
 तच्च प्रतिभानन्त्ये सत्युपद्यते, तच्चार्थानन्त्ये, तच्च ध्वनिप्रभेदादिति ।
-बालप्रिया कथमस्य व्यापार इतीति ।
+
+
+बालप्रिया
+
+कथमस्य व्यापार इतीति ।
 ध्वनिप्रतिपादनं कथमुपयोगीत्येतदित्यर्थः ।
 इत्येतदिति सम्बन्धः ॥ १  ॥  ॥ ॥
 व्यधिकरणमिति ।
@@ -121,7 +129,11 @@ __________
 मुग्धमधुरविभवसरसकिसलयितपरिमलस्पर्शनान्यत्यन्ततिरस्कृतानि ।
 तैरनाहृतसौन्दर्यसर्वजनवाल्लभ्याक्षीणप्रसरत्वसन्तापप्रशमनतर्पकत्वसौकुमाय्रसार्वङ्कालिकतत्संस्कारानुवृत्तित्वयत्नाभिलषणीयसङ्गतत्वानि ध्वन्यमानानि यानि, तैः स्मितादेः प्रसिद्धस्यार्थस्य स्थविरवेधोविहितधर्मव्यतिरेकेण धर्मान्तरपात्रात यावत्क्रियते, तावत्तदपूर्वमेव सम्पद्यत इति सर्वत्रेति मन्तव्यम् ।
 अस्येति अपूर्वत्वमेव भासत इति दूरेण सम्बन्धः ।
-सर्वत्रैवास्य बालप्रिया ऽस्मितम्ऽ इति ।
+सर्वत्रैवास्य
+
+बालप्रिया
+
+ऽस्मितम्ऽ इति ।
 किञ्चित्स्मितं मन्दस्मितम् ।
 मुग्धं भवति इति सर्वत्र शेष ।
 तरलश्च मधुरश्च तरलमधुरः ।
@@ -171,7 +183,11 @@ __________
 वदनस्पर्शजमेव तावद्दिव्यं सुखं त्यक्तुन्न पारयतीति ।
 अत एव प्रियस्येति ।
 वधूः नवोढा ।
-बोधत्रासेन प्रियतमप्रबोधभयेन निरुद्धो हठात्प्रवर्तमानः प्रवर्तमानोऽपि कथञ्चित्कथञ्चित्बालप्रिया चतुर्णा वर्णनेऽपि तदपेक्षया स्मितं किञ्चिदित्यादौ तद्वर्णनस्यापूर्वत्वमेव भातीत्यर्थः ।
+बोधत्रासेन प्रियतमप्रबोधभयेन निरुद्धो हठात्प्रवर्तमानः प्रवर्तमानोऽपि कथञ्चित्कथञ्चित्
+
+बालप्रिया
+
+चतुर्णा वर्णनेऽपि तदपेक्षया स्मितं किञ्चिदित्यादौ तद्वर्णनस्यापूर्वत्वमेव भातीत्यर्थः ।
 एवमुत्तरत्रापि बोध्यम् ।
 अनपेति ।
 अनपाकरणीयप्रधानत्वासाधारणत्वादिरूपं व्यङ्ग्यं यद्धर्मान्तरं तस्मिन्नित्यर्थः ।
@@ -203,7 +219,11 @@ __________
 हृदयं साकाङ्क्षप्रतिपत्ति नामेति ।
 साकाङ्क्षा साभिलाषा प्रतिपत्तिः स्थितिर्यस्य तादृशं रुहिरुहिकाकदर्थितं न तु मनोरथसम्पत्तिचरितार्थं, किन्तु रेतः परस्परजीवितसर्वस्वाभिमानरूपायाः परनिर्वृतेः केन चिदप्यनुभवेनालब्धावगाहनायाः पारङ्गतमिति परिपूर्णीभूत एव शृङ्गारः ।
 द्वितीयश्लोके तु परिचुम्बनं सम्पन्नं लज्जा स्वशब्देनोक्ता ।
-तेनापि सा परिचुम्बितेति यद्यपि पोषित एव शृङ्गारः, तथापि प्रथमश्लोके परस्पराभिलाषप्रसरनिरोधपरम्परापर्यवसानासम्भवेन या बालप्रिया प्रतिबद्धः ।
+तेनापि सा परिचुम्बितेति यद्यपि पोषित एव शृङ्गारः, तथापि प्रथमश्लोके परस्पराभिलाषप्रसरनिरोधपरम्परापर्यवसानासम्भवेन या
+
+बालप्रिया
+
+प्रतिबद्धः ।
 भोगपदस्य साक्षात्कारार्थकत्वमभिप्रेत्याहआभागेनेत्यादि ।
 निद्रेति ।
 निद्राविचारेण अयं निद्रातीति बुद्ध्या या निर्वर्णना दर्शनं तयेत्यर्थः ।
@@ -262,7 +282,11 @@ __________
 इत्यत्र ।
 प्रतिपादितं चैतदिति ।
 चशब्दोऽपिशब्दार्थे भिन्नक्रमः ।
-एतदपि बालप्रिया तदसम्भवेन तत्सम्भवं विनेत्यर्थः ।
+एतदपि
+
+बालप्रिया
+
+तदसम्भवेन तत्सम्भवं विनेत्यर्थः ।
 रतिरिति ।
 निर्वृतिरित्यर्थः ।
 उक्तेति ।
@@ -309,7 +333,11 @@ __________
 यद्यप्यर्थानन्त्यमात्रे हेतुर्वृत्तिकारेणोक्तः, तथापि कारिकाकारेण नोक्त इति भावः ।
 यदि वा उच्यते संग्रहश्लोकोऽयमिति भावः ।
 अत एवास्य श्लोकस्य वृत्तिग्रन्थे व्याख्यानं न कृतम् ।
-बालप्रिया इवशब्देनेति ।
+
+
+बालप्रिया
+
+इवशब्देनेति ।
 सम्भावनार्थकेनेति भावः ।
 इत्यर्थ इति ।
 गम्यत इति शेषः ।
@@ -368,7 +396,11 @@ __________
 काव्यं मधुमांसस्थानीयं स्पृहां लज्जामिति, रागवतामुत्कमिका इति च ।
 शब्दस्पृष्टेऽर्थे का हृद्यता ।
 एतानि चोदाहरणानि वितत्य पूर्वमेव व्याख्यातानीति किं पुनरुकक्त्या सत्यपि प्राक्तनकविस्पृष्टत्वे नूतनत्वं भवत्येवैतत्प्रकारानुग्रहादित्येतावति तात्पर्यं हि ग्रन्थस्याधिकन्नान्यत् ।
-बालप्रिया  द्रुमान्वयिनमर्थमाहबहिरित्यादि ।
+
+
+बालप्रिया
+
+द्रुमान्वयिनमर्थमाहबहिरित्यादि ।
 अर्थान्वयिनमाहप्राक्तनैरित्यादि ।
 का हृद्यतेति ।
 अतश्चऽकृतऽ इत्यादिश्लोकात्ऽएवंवादिनीऽत्यादेःऽसुरभीऽत्यादिश्लोकात्ऽसज्जतीऽत्यादेश्च नवत्वमस्तीति भावः ।
@@ -412,7 +444,11 @@ __________
 
 करिणीवैधव्यकरो मम पुत्रः एकेन काण्डेन विनिपातनसमर्थः हतस्नुषया तथा कृतो यथा काण्डकरणकं वहतीत्युत्तान एवायमर्थः, गाथार्थस्यानालीढतैवेति सम्बन्धः   ॥ ४. ॥
 
-बालप्रिया एतत्प्रकारेत्यस्य ध्वनिप्रभेदेत्यर्थः ।
+
+
+बालप्रिया
+
+एतत्प्रकारेत्यस्य ध्वनिप्रभेदेत्यर्थः ।
 वृत्तौऽशरीरत्वेन नवत्वऽमित्युभयत्र भवतीति शेषः.ऽएककाण्डविनिपातीऽति छाया, तस्य विवरणमेकेन काण्डेनेत्यादि ।
 काण्डो बाणः   ॥ ४. ॥
 
@@ -434,7 +470,11 @@ __________
 प्रत्युत विपरीतं सम्पद्यते ।
 आस्तान्तस्य स्वरूपचिन्तेत्यर्थः ।
 तेन तेन प्रकारेण अत्र लोकतन्त्रे ।
-विरागो जायत इत्यनेन तत्वज्ञानोत्थितं निर्वेदं बालप्रिया ऽसीतात्यन्तवियोगपर्यन्तमित्यत्रात्यन्तग्रहणफलमाहअत्यन्तग्रहणेनेत्यादि ।
+विरागो जायत इत्यनेन तत्वज्ञानोत्थितं निर्वेदं
+
+बालप्रिया
+
+ऽसीतात्यन्तवियोगपर्यन्तमित्यत्रात्यन्तग्रहणफलमाहअत्यन्तग्रहणेनेत्यादि ।
 वृष्णिपाण्डवविरसावसानेत्युक्तं ववृणेति ।
 वृष्णीनामित्यादि ।
 मोक्षलक्षणः पुरुषार्थो मुख्यतया विवक्षाविषयत्वेन सूचित इति यदुक्तं तस्यानुपपत्तिमाशङ्क्य परिहरतियद्यपीत्यादिना ।
@@ -467,7 +507,11 @@ __________
 शान्तरसस्थायिनं सूचयता तस्यैव च सर्वेतरासारत्वप्रति पादनेन प्राधान्यमुक्तम् ।
 ननु शृङ्गारवीरादिचमत्कारोऽपि तत्र भातीत्याशङ्क्याहपारमार्थिकेति ।
 भोगाभिनिवेशिनां लोकवासनाविष्टानामङ्गभूतेऽपि रसे तथाभिमानः, यथा शरीरे प्रमातृत्वाभिमानः प्रमातुर्भेगायतनमात्रेऽपि केवलेष्विति ।
-परमेश्वरभक्त्युपकरणेषु बालप्रिया वस्तुभूततयेति ।
+परमेश्वरभक्त्युपकरणेषु
+
+बालप्रिया
+
+वस्तुभूततयेति ।
 परमार्थतयेत्यर्थः ।
 तुच्छेत ।
 तुच्छं शशशृङ्गादि ।
@@ -494,7 +538,11 @@ __________
 अग्र इति अनुक्रमण्यनन्तरं यो भारतग्रन्थः तत्रेत्यर्थः ।
 ननु वसुदेवापत्यं वासुदेव इत्युच्यते, न परमेश्वरः परमात्मा महादेव इत्याशङ्क्याहवासुदेवादिसंज्ञाभिधेयत्वेनेति ।
 बहूनां जन्मनामन्ते ज्ञानवान्मां प्रपद्यते ।
-वासुदेवस्सर्वं बालप्रिया अन्वयं दर्शयतिविभूतिष्वित्यादि ।
+वासुदेवस्सर्वं
+
+बालप्रिया
+
+अन्वयं दर्शयतिविभूतिष्वित्यादि ।
 वृत्तौऽतथाचेऽत्यादि ।
 द्योतयन् शब्दोऽवभासत इति सम्बन्धः ।
 ऽन्यक्षेणेऽति ।
@@ -527,7 +575,11 @@ __________
 यत इयं लौकिकी प्रसिद्धिरनादिस्ततो भगवद्य्वासप्रभृतीनामप्ययमेवास्वशब्दाभिधाने आशयः, अन्यथा हि क्रियाकारकसम्बन्धादौऽनारायणं नमस्कृत्येऽत्यादिशब्दार्थनिरूपणे च तथाविध एव तस्य भगवत आशय इत्यत्र किं प्रमाणामिति भावः ।
 विदग्धविद्वद्ग्रहणेनकाव्यनये शास्त्रनय इति चानुसृतम् ।
 रसादिमय एतस्मिन् कविः स्यादवधानवानिति यदुक्तं, तदेव प्रसङ्गागतभारतसम्बन्धनिरूपणानन्तरमुपसंहरतितस्मात्स्थितमिति ।
-बालप्रियाऽगीतादिप्रदेशान्तरेषुऽ इत्यादिकं विवृणोति लोचनेबहूनामित्यादि ।
+
+
+बालप्रिया
+
+ऽगीतादिप्रदेशान्तरेषुऽ इत्यादिकं विवृणोति लोचनेबहूनामित्यादि ।
 काकतालीयवशादिति यदृच्छयेत्यर्थः ।
 इत्यत्रोक्तमिति सम्बन्धः ।
 काशिकावृत्ताविति शेषः ।
@@ -560,7 +612,11 @@ __________
 नन्वेवं प्रतीयमानं जलनिधिदर्शनमेवाद्भुतानुगुणं भवत्विति रसानुगुणोऽत्र वाच्योऽर्थ इत्यस्मिन्नंशे कथमिदमुदाहरणमित्याशङ्क्याहतत्रेति ।
 क्षुण्णं हीति ।
 पुनः पुनर्वर्णननिरूपणादिना यत्पिष्टपिष्टत्वादतिनिर्भिन्नस्वरूपमित्यर्थः ।
-बहुतरलक्ष्यव्यापकञ्चैतदिति बालप्रिया लोकप्रसिद्ध्यनुरोधिनीति भावः ।
+बहुतरलक्ष्यव्यापकञ्चैतदिति
+
+बालप्रिया
+
+लोकप्रसिद्ध्यनुरोधिनीति भावः ।
 ऽअत एवेऽत्यादिऽदृश्यतऽ इत्यन्तं विवृणोतियत इत्यादि ।
 तस्या इति ।
 चारुत्वेन प्रतीतेरित्यर्थः ।
@@ -601,7 +657,11 @@ __________
 स्वयमिति ।
 तत्र वस्तुना व्यङ्ग्येन गुणीभूतेन नवत्वं सत्यप पुराणार्थस्पर्शे यथा ममैव भअविहलरख्खणेककमल्लसरणागआणअथ्थाण ।
 खणमत्तं विण दिण्णा विस्सामकहेत्ति जुत्तमिणम् ॥ ॥
-अत्र त्वमनवरतमर्थास्त्यजसीति औदार्यलक्षणं वस्तु ध्वन्यमानं वाच्यस्योपस्कारकं बालप्रिया त्रिभेदव्यङ्ग्यापेक्षयेत्येतद्व्याचष्टेत्रिप्रभेद इत्यादि ।
+अत्र त्वमनवरतमर्थास्त्यजसीति औदार्यलक्षणं वस्तु ध्वन्यमानं वाच्यस्योपस्कारकं
+
+बालप्रिया
+
+त्रिभेदव्यङ्ग्यापेक्षयेत्येतद्व्याचष्टेत्रिप्रभेद इत्यादि ।
 भअवहलेति ।
 भयविह्वलरक्षणैकमल्लशरणागतानामर्थानाम् ।
 क्षणमात्रमात्रमपि न दत्ता विश्रामकथेति युक्तमिदम् ॥   ॥
@@ -623,7 +683,11 @@ __________
 इति  ।
 व्यङ्ग्येन रसेन गुणीभूतेन वाच्योपस्कारेण नवत्वं यथा ममेव जरा नेयं मूर्ध्नि ध्रुवमयमसौ कालभुजगः      क्रुधान्धः फूत्कारैः स्फुटगरलफेनान् प्रकिरति ॥     ॥
 तदेनं संपश्यत्यथ च सुखितम्मन्यहृदयः      शिवो पायन्नेच्छन् बत बत सुधीरः खलु जनः ॥
-बालप्रिया त्यागिजनकरपरम्परासञ्चारणखेदनिस्सहशरीराः ।
+
+
+बालप्रिया
+
+त्यागिजनकरपरम्परासञ्चारणखेदनिस्सहशरीराः ।
 अर्थाः कृपणगृहस्थाः स्वस्थावस्थाः स्वपन्तीव ॥ ॥
 इति छाया ।
 अर्थःस्पष्टः ।
@@ -679,7 +743,11 @@ __________
 नेदीय इति ।
 निकटतरं हृदयानुप्रवेशि न भवतीत्यर्थः ।
 अत्र हेतुमाहएवं हि सतीति ।
-बालप्रिया इत्यर्थः ।
+
+
+बालप्रिया
+
+इत्यर्थः ।
 ध्रुवमित्युत्प्रेक्षायाम् ।
 तदिति जनः ।
 तदेनान् तथाभूतान् फेनान् ।
@@ -745,7 +813,11 @@ __________
 आदिग्रहणं व्याचष्टेस्वालक्षेयेति ।
 स्वरूपेत्यर्थः ।
 यथारूपस्पर्शयोस्तीव्रैकावस्थयोरेकद्रव्यनिष्ठयोरेककालयोश्च ।
-बालप्रिया स्यादिति शेषः ।
+
+
+बालप्रिया
+
+स्यादिति शेषः ।
 लोचने भावं विवृणोतिअपूर्वबन्धेत्यादि ।
 काव्यत्वमित्यस्य व्युत्पत्तिं दर्शयतिकवनीयमित्यादि ॥ ६  ॥  ॥ ॥
 कारिकास्थं शुद्धस्येति पदमन्यथाप्रतिपत्तिपरिहाराय व्याचष्टेव्यङ्ग्येत्यादि ।
@@ -780,7 +852,11 @@ __________
 प्रयत्नेनापि विचार्यमाणं पौनरुक्त्यं न लभ्यमिति यावत् ।
 प्रियाणामिति ।
 बहुवल्लभो हि सुभगो राधावल्लभप्रायस्तास्ताः कामिनीः परिभोगसुभगमुपभुञ्जानोऽपि न विभ्रमपौनरुक्त्यं पश्यति तदा ।
-एतदेव प्रियात्वमुच्यते, यदाह बालप्रिया प्रथमसर्ग इत्यर्थः ।
+एतदेव प्रियात्वमुच्यते, यदाह
+
+बालप्रिया
+
+प्रथमसर्ग इत्यर्थः ।
 ऽउपवर्णितेऽति ।
 तृतीयसर्ग इति शेषः ।
 ऽनिरूपितरूपसौष्ठवेऽति ।
@@ -811,7 +887,11 @@ __________
 न ह्यसावग्निचयनादिवदन्यतश्शिक्षितः, येन तत्सादृश्यात्पुनरुक्ततां गच्छेत् ।
 अपि तु निसर्गोद्भिद्यमानमदनाङ्कुरविकासमात्रन्तदिति नवनवत्वम् ।
 तद्वत्परकीयशिक्षानपेक्षनिजप्रतिभागुणनिष्यन्दभूतः काव्यार्थ इति भावः ।
-बालप्रिया  प्रियाणां विभ्रमा इत्यनेन गम्यमर्थमाहप्रियाणामिति चेत्यादि ।
+
+
+बालप्रिया
+
+प्रियाणां विभ्रमा इत्यनेन गम्यमर्थमाहप्रियाणामिति चेत्यादि ।
 न हीत्यादि ।
 असौ विभ्रमविशेषः ।
 यथा अग्निचयनमन्यतश्शिक्ष्यते तथा शिक्षितो नेत्यर्थः ।
@@ -856,7 +936,11 @@ __________
 स्वानुभूतपरानुभूतानां यत्सामान्यं तदेव विशेषान्तररहितन्तन्मात्रं तस्याश्रयेण ।
 न हि तैरिति कविभिः ।
 एतच्चात्यन्तासंभावनार्थमुक्तम् ।
-बालप्रिया स्वपरानुभूतेत्येतत्व्याचष्टेस्वानुभूतेत्यादि ।
+
+
+बालप्रिया
+
+स्वपरानुभूतेत्येतत्व्याचष्टेस्वानुभूतेत्यादि ।
 मात्रशब्दार्थविवरणम्विशेषान्तररहितमिति ।
 वृत्तौऽअपरिचितादिस्वलक्षणम्ऽ इति ।
 अपरिचितादीनां वस्तूनां स्वरूपमित्यर्थः ।
@@ -883,7 +967,11 @@ __________
 तमेव प्रकटयत न चेदिति ।
 उक्तिर्हीति ।
 पर्यायमात्रतैव यद्युक्तिविशेषस्तत्पर्यायान्तरैरविकलं तदर्थोपनिबन्धे अपौनरुक्त्याभिमानो न भवति ।
-बालप्रिया प्रत्यक्षदर्शनेऽपीति ।
+
+
+बालप्रिया
+
+प्रत्यक्षदर्शनेऽपीति ।
 कवीनां वस्तुस्वरूपप्रत्यक्षदर्शने सत्यपीत्यर्थः ।
 स्पृश्यत इति ।
 कविवाचेति शेष ।
@@ -904,18 +992,20 @@ __________
 तत्तर्हि ।
 अविकलं वैकल्यं विना ।
 अपौनरुक्त्याभिमानो न भवतीति ।
+
+
 वाच्यानां च काव्ये प्रतिभासमानानां यद्रूपं तत्तु ग्राह्यविशेषाभेदेनैव प्रतीयते ।
 तेनोक्तवैचित्र्यवादिना वाच्यवैचित्र्यमनिच्छताप्यवश्यमेवाभ्युपगन्तव्यम् ।
 तदयमत्र सङ्क्षेपः 
 
-> वाल्मीकव्यतिरिक्तस्य  
+> वाल्मीकिव्यतिरिक्तस्य  
 > यद्येकस्यापि कस्यचित् ।  
 > इष्यते प्रतिभार्थेषु  
 > तत्तदानन्त्यमक्षयम् ॥ ॥
 
-किञ्च, उक्तिवैचित्र्यं यत्काव्यनवत्वे निबन्धनमुच्यते तदस्मत्पक्षानुगुणमेव ।
-यतो यावानयं काव्यार्थानन्त्यभेदहेतुः प्रकारः प्राग्दर्शितः स सर्व एव पुनरुक्तिवैचित्र्याद्द्विगुणतामापद्यते ।
-यश्चायमुपमाश्लेषादिरलङ्कारवर्गः
+किञ्च, उक्तिवैचित्र्यं यत्काव्यनवत्वे निबन्धनमुच्यते - तदस्मत्पक्षानुगुणमेव ।
+यतो यावानयं काव्यार्थान् अन्त्यभेदहेतुः प्रकारः प्राग्दर्शितः स सर्व एव पुनरुक्ति-वैचित्र्याद् द्विगुणताम् आपद्यते ।
+यश् चायम् उपमाश्लेषादिरलङ्कारवर्गः
 
 लोचनं
 
@@ -929,7 +1019,11 @@ __________
 पुनरिति ।
 भूय इत्यर्थ. उपमा हि निभ, प्रतिं च्छल, प्रतिबिम्ब, प्रतिच्छाय, तुल्य, सदृशाभासादिभिर्विचित्राभिरुक्तिभिर्विचित्रीभवत्येव ।
 वस्तुत एतासामुक्तीनामर्थवैचित्र्यस्य विद्यमानत्वात् ।
-नियमेन भानयोगाद्धि निभशब्दः, बालप्रिया किन्तु पौनरुक्त्यबुद्धिरेव भवतीत्यर्थः ।
+नियमेन भानयोगाद्धि निभशब्दः,
+
+बालप्रिया
+
+किन्तु पौनरुक्त्यबुद्धिरेव भवतीत्यर्थः ।
 विशिष्टवाच्येति ।
 वाच्यविशेषेत्यर्थः ।
 प्रत्यक्षादिप्रमाणैः ग्राह्य इति सम्बन्धः ।
@@ -972,7 +1066,11 @@ __________
 सौन्धवभाषया महमह इत्यनया भणित्या समुन्मेषिता  ॥ ७ ॥
 
 अवस्थादिविभिन्नानां वाच्यानां विनिबन्धनम् ।
-बालप्रिया अर्थाद्यानन्त्यमित्यर्थः ।
+
+
+बालप्रिया
+
+अर्थाद्यानन्त्यमित्यर्थः ।
 तत इति ।
 भणितिवैचित्र्यादित्यर्थः ।
 यस्तेत्यन्यपदार्थविवररणमलङ्काराणामित्यादि ।
@@ -1041,14 +1139,19 @@ __________
 शक्तीनामित्यन्तं कारिकयोर्मध्योपस्कारः ।
 द्वितीयकारिकायास्तुर्यं पादं व्याचष्टेयथाहीति  ॥ १॥
 , १० ॥
-बालप्रिय अन्यस्तु ग्रन्थ इति ।
+
+
+बालप्रिया 
+
+अन्यस्तु ग्रन्थ इति ।
 ऽयत्प्रदर्शितं प्रागिऽतिऽन तच्छक्यमपोहितुम्ऽ इति च ग्रन्थ इत्यर्थः  ॥ ८  ॥  ॥ ॥
 चतुर्थेत्यादि ।
 ऽतत्तु भात रसाश्रयाऽदित्यस्यार्थोऽत्र विधीयमान इत्यर्थः ।
 करिकयोरिति ।
 ऽरसभावेऽत्यादेःऽवाचस्पतीऽत्यादेश्च कारकयोरित्यर्थ ।
+
 उपस्कार इति ।
-यद्यन्वीयते अन्यैः कविभिः तत्तर्हि इत्यर्थः ।
+यद्य् अन्वीयते अन्यैः कविभिः तत्तर्हि इत्यर्थः ।
 अन्येषां वाल्मीकिव्यतिरिक्तानाम् ।
 कवीनां गणना का ।
 ते अगण्या भवेयुरिति तदर्थः ।
@@ -1109,7 +1212,11 @@ __________
 एषा खण्डीकृत्य वृत्तौ व्याख्याता ।
 शरीरिणामित्ययञ्चशब्दः प्रतिवाक्यं द्रष्टव्य इति दर्शितम् ।
 शरीरिण इति ।
-पूर्वमेव प्रतिलब्धस्वरूपतया बालप्रिया  लोचनेसंवादा इत्यादि ।
+पूर्वमेव प्रतिलब्धस्वरूपतया
+
+बालप्रिया
+
+लोचनेसंवादा इत्यादि ।
 ऽसंवादाऽ इत्यादिऽसुमेधसाम्ऽ इत्यन्तं कारिकायाः प्रथमार्धं,ऽनैकेऽत्यादिऽविपश्चितेऽ त्यन्तं द्वितीयार्धं चेत्यर्थः ।
 अत्र सुमेधसां संवादा इत्यस्य सुमेधसां बुद्धीनां काव्यानां च संवादा इत्यर्थ इत्यभिप्रेत्यऽस्थितं ह्येतदिऽत्यादिकंऽसंवादो हि काव्यार्थस्योच्यतऽ इति च वृत्तावुक्तमिति बोध्यम् ॥११ ॥
 ख एडीकृत्य(?) वृत्तौ व्याख्यातेति ।
@@ -1156,7 +1263,11 @@ __________
 तुच्छात्मेति ।
 अनुकारे ह्यनुकार्यबुद्धिरेव चित्रपुस्तादाविव न तु सिन्दूरादिबुद्धिः स्फुरति, सापि च न चारुगत्वायेति भावः ॥१३॥
 
-बालप्रिया वृत्तौऽकाव्यार्थस्येऽति पूरतम् ।
+
+
+बालप्रिया
+
+वृत्तौऽकाव्यार्थस्येऽति पूरतम् ।
 काव्यार्थगतमन्यसादृश्यं विवृणोतिऽयदन्येनेऽत्यादि ।
 प्रतिबिम्बवदित्यादित्रये षष्ट्यन्ताद्वतिः ।
 प्रतिबिम्बे अन्यसादृश्यं शरीरिणा बिम्बेन सादृश्यमेवमालेख्याकारतुल्यदेहनोश्च शरीरिणा सादृश्यं बोध्यम् ।
@@ -1221,7 +1332,11 @@ __________
 आत्मन इत्यस्य शब्दस्य पूर्वपठिताभ्यामेव तत्वस्य सारभूतस्येति च पदाभ्यामर्थो निरूपितः ॥ १४ ॥
 ससंवादानामिति पाठः ।
 संवादानामिति तु पाठे वाक्यार्थरूपाणां समुदायानां ये संवादाः तेषामिति वैयधिकरण्येन संगतिः ।
-वस्तुशब्तदेन एको वा द्वौ वा त्रयो बालप्रिया  एतदेवेत्यत्रत्यैतत्पदार्थविवरणम्तृतीयस्येत्यादि ।
+वस्तुशब्तदेन एको वा द्वौ वा त्रयो
+
+बालप्रिया
+
+एतदेवेत्यत्रत्यैतत्पदार्थविवरणम्तृतीयस्येत्यादि ।
 आत्मन इत्यस्यार्थो निरूपित इति सम्बन्धः तत्त्वस्य सारभूतस्येति चात्मपदार्थविवरणमिति भावः ।
 वृत्तौ ।
 ऽपूर्वस्थितीऽ त्याद्युक्तस्यैव विवरणंऽपुराणेऽत्यादि ।
@@ -1271,7 +1386,11 @@ __________
 उदेतीत्यर्थः ।
 बुद्धेरेवाकारं दर्शयतिस्फुरणेयं काचिदिति ।
 यदपि तदपि रम्यं यत्र लोकस्य किञ्चि      त्स्फुरितमिदमितीयं बुद्धिरभ्युज्जिहीते ।
-बालप्रिया अर्था इति ।
+
+
+बालप्रिया
+
+अर्था इति ।
 विवक्षिता इति शेषः ।
 तानि त्वित्यादिकं विवृणोतिअक्षराणीत्यादि ।
 तान्येवोपनिबद्धानीत्यस्य विवरणम्तेनैवेत्यादि ।
@@ -1313,7 +1432,11 @@ __________
 इति कारिका खण्डीकृत्य पठिता ॥ १६ ॥
 स्वविषय इति ।
 स्वयन्तात्कालिकत्वेनास्फुरित इत्यर्थः ।
-परस्वादानेच्छेत्यादिद्वितीयं श्लोकार्धं पूर्वोपस्कारेम सह पठतिपरस्वादानेच्छाविरतमनसो बालप्रिया तत्र लोकस्येत्यादेर्विवरणं वृत्तौऽस्फुरणेयम्ऽ इत्यादि ।
+परस्वादानेच्छेत्यादिद्वितीयं श्लोकार्धं पूर्वोपस्कारेम सह पठतिपरस्वादानेच्छाविरतमनसो
+
+बालप्रिया
+
+तत्र लोकस्येत्यादेर्विवरणं वृत्तौऽस्फुरणेयम्ऽ इत्यादि ।
 तदेतद्दर्शयन्नाह लोचनेलोकस्येत्यादि ।
 खण्डीकृत्य पठितेति ।
 ऽयदपीऽत्यादिकारिकापूर्वार्धं पाठानन्तरंऽस्फुरणेयऽमित्यादिवृत्तिग्रन्थपाठः, स्तदनन्तरंऽअनुगतमपीऽत्याद्युत्तरार्धपाठः, तदनम्तरंऽगतम्ऽ इत्यादिवृतितग्रन्थपाठश्चेति भावः  ॥ १६  ॥
@@ -1353,7 +1476,11 @@ __________
 यस्मादिति काव्याख्यादुद्यानात् ।
 सर्वे समीहितमिति ।
 व्युत्पत्तिकीर्तिप्रीतिलक्षणमित्यर्थः ।
-बालप्रिया त्यादिभावयित्वेत्यन्तस्य वृत्तिग्रन्थस्य पाठः ।
+
+
+बालप्रिया
+
+त्यादिभावयित्वेत्यन्तस्य वृत्तिग्रन्थस्य पाठः ।
 तस्य परस्वादानेच्छाविरतमनस इत्यत्र विरतेत्यनेन सम्बन्धश्चेति भावः ।
 अवतारयतिकुत इत्यादि ।
 आशयेन चिन्तया ।
@@ -1388,7 +1515,11 @@ __________
 सर्वसमीहितप्राप्तिर्हि काव्ये तदेकायत्ता ।
 एतच्चोक्तं विस्तरतः ॥
 सत्काव्यतत्वनयवर्त्म चिरप्रमुक्तकल्पं मनस्सु परिपक्वधियां यदासीत् ।
-बालप्रिया तथाविधफलभाज इति ।
+
+
+बालप्रिया
+
+तथाविधफलभाज इति ।
 तथाविधानि व्युत्पत्यादीनि फलानि भजन्ते तद्भजनशीलाः तदर्हा इत्यर्थः ।
 तैरिति ।
 राजकुमारादिभिरित्यर्थः ।
@@ -1423,7 +1554,11 @@ __________
 एवंविधस्सारो दृश्यते तस्यायं श्लोकप्रबन्धस्तस्मादादरणीयमेतदित लोकः प्रवर्तमानो दृश्यते ।
 लोकश्चावश्यं प्रवर्तनीयः तच्छास्त्रोदितप्रयोजनसम्पत्तये ।
 तदनुग्राह्यश्रोतृजनप्रवर्तनाङ्गत्वाद्ग्रन्थकाराः स्वनामनिबन्धनं कुर्वन्ति, तदभिप्रायेणाहआनन्दनवर्धन इति ।
-प्रथितशब्देनैतदेव प्रथितं यत्तु बालप्रिया धकं युक्तजातं चेत्यर्थः ।
+प्रथितशब्देनैतदेव प्रथितं यत्तु
+
+बालप्रिया
+
+धकं युक्तजातं चेत्यर्थः ।
 ऽव्याकरोत्ऽ विशदीकृतवान् ।
 ऽसहृदयेऽति ।
 सहृदयानां य उदय अभ्युदयः ध्वनिस्वरूपावबोधहेतुका प्रीतिः तल्लाभस्य हेतोः ।
@@ -1465,7 +1600,11 @@ __________
 लोचनं
 
 तत् ॥
-बालप्रिया तदिति ।
+
+
+बालप्रिया
+
+तदिति ।
 तस्मादित्यर्थः ।
 एतदेव प्रथितमिति ।
 उक्तमेव प्रकाशितमित्यर्थः ।
@@ -1513,7 +1652,11 @@ __________
 वस्तुतश्शिवमये हृदि स्फुटं सर्वतश्शिवमयं विराजते ।
 नाशिवं क्वचन कस्यचिद्वचः तेन वश्शिवमयी दशा भवेत् ॥
 इति महामाहेश्वराभिनवगुप्तविरचिते काव्यालोकलोचने चतुर्थ उद्योतः समाप्तश्चावं ग्रन्थः ॥
-बालप्रिया भट्टेन्दुराजः तस्य मत्या ज्ञानेन संस्कृतो बुद्धिलेशो यस्य सः ।
+
+
+बालप्रिया
+
+भट्टेन्दुराजः तस्य मत्या ज्ञानेन संस्कृतो बुद्धिलेशो यस्य सः ।
 वाक्येति ।
 वाक्यं मीमांसाशास्त्रं, प्रमाणं न्यायशास्त्रं, पदं व्याकरणशास्त्रं, तद्वेदिनां गुरुरित्यर्थः ।
 प्रबन्धसेवायां रसो यस्य सः ।
@@ -1561,4 +1704,8 @@ __________
 
 क्वाहं मन्दधीर्बहुधात्र तत् ।
 टिप्पण्यां स्खलितानि स्युस्तदियं शोध्यतां बुधैः ॥
-इति श्रीसहृदयतिलक पण्डितराज बिरुदद्वयशालिना रामनाम्ना शारकेण विरचितायां काव्यालोकलोचनटिप्पण्यां बालप्रियाख्यायां चतुर्थ उद्योतः समाप्तोऽयं ग्रन्थः ॥
+इति श्रीसहृदयतिलक पण्डितराज बिरुदद्वयशालिना रामनाम्ना शारकेण विरचितायां काव्यालोकलोचनटिप्पण्यां
+
+बालप्रिया
+
+ख्यायां चतुर्थ उद्योतः समाप्तोऽयं ग्रन्थः ॥
